配置swag完成
